fixed wrong color in feed

--- a/client/src/Components/Profile/PostsList.module.css
+++ b/client/src/Components/Profile/PostsList.module.css
@@ -55,7 +55,6 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  background-color: red;
   display: flex;
   flex-direction: column;
   align-items: center;
